Update screens, configure logo, configured colors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,12 @@
   "editor.insertSpaces": true,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
-  "editor.codeActionsOnSave": [
-    "source.fixAll.eslint"
-  ],
+  "editor.defaultFormatter": "esbenp.vscode-eslint",
+  "vetur.format.defaultFormatter.html": "prettyhtml",
+  "vetur.format.defaultFormatter.js": "prettier-eslint",
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
   "eslint.validate": [
     "javascript",
     "javascriptreact",
