--- a/package.json
+++ b/package.json
@@ -17,20 +17,22 @@
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "quasar": "^2.6.0",
+    "vls": "^0.8.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@quasar/app-webpack": "^3.0.0",
+    "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.10.0",
-    "eslint-plugin-vue": "^9.0.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "@types/node": "^12.20.21",
-    "@quasar/app-webpack": "^3.0.0"
+    "eslint-plugin-vue": "^9.0.0",
+    "@volar-plugins/vetur": "latest"
   },
   "browserslist": [
     "last 10 Chrome versions",
