--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quote-manager",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Dionei1",
   "productName": "Quote Manager",
   "author": "Dionei Beilke dos Santos <tecnico.beilke@gmail.com>",
@@ -11,7 +11,8 @@
     "build": "quasar build",
     "build:pwa": "quasar build -m pwa",
     "lint": "eslint --ext .js,.ts,.vue ./",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "app": "quasar dev -m electron"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -26,13 +27,14 @@
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
+    "@volar-plugins/vetur": "latest",
+    "electron": "^22.2.0",
     "eslint": "^8.10.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.0.0",
-    "@volar-plugins/vetur": "latest"
+    "eslint-plugin-vue": "^9.0.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
