--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "axios": "^1.3.3",
     "core-js": "^3.6.5",
+    "moment": "2.29.4",
     "quasar": "^2.6.0",
     "vls": "^0.8.2",
     "vue": "^3.0.0",
@@ -34,7 +36,8 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.0.0"
+    "eslint-plugin-vue": "^9.0.0",
+    "eslint-webpack-plugin": "^4.0.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
