--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "quasar": "^2.6.0",
     "vls": "^0.8.2",
     "vue": "^3.0.0",
+    "vue-i18n": "^9.3.0-beta.16",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
