--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vls": "^0.8.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.3.0-beta.16",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@quasar/app-webpack": "^3.0.0",
