--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^1.3.3",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
     "moment": "2.29.4",
     "quasar": "^2.6.0",
     "vls": "^0.8.2",
