--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,4 +22,8 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "vetur.experimental.templateInterpolationService": true,
   "editor.accessibilitySupport": "off",
+  "cSpell.words": [
+    "composables",
+    "vuex"
+  ],
 }
