--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "quote-manager",
   "version": "1.0.1",
-  "description": "Dionei1",
-  "productName": "Quote Manager",
+  "description": "Dionei",
+  "productName": "ASPlus",
   "author": "Dionei Beilke dos Santos <tecnico.beilke@gmail.com>",
   "private": true,
   "scripts": {
