Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quote-manager",
+  "name": "ads-plus-manager",
   "version": "1.0.1",
   "description": "Dionei",
   "productName": "ASPlus",
