--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "dependencies": {
     "@quasar/extras": "^1.16.1",
     "axios": "^1.3.3",
+    "chart.js": "^4.3.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "moment": "2.29.4",
     "quasar": "^2.11.9",
     "vls": "^0.8.2",
     "vue": "^3.0.0",
+    "vue-chartjs": "^5.2.0",
     "vue-i18n": "^9.3.0-beta.16",
     "vue-router": "^4.0.0",
     "vuex": "^4.1.0"
