--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.3.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
+    "firebase": "^9.21.0",
     "moment": "2.29.4",
     "quasar": "^2.11.9",
     "vls": "^0.8.2",
