--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
   "vetur.experimental.templateInterpolationService": true,
   "editor.accessibilitySupport": "off",
   "cSpell.words": [
+    "axios",
     "composables",
     "vuex"
   ]
